--- a/productservice/package.json
+++ b/productservice/package.json
@@ -1,22 +1,18 @@
 {
-  "name": "api-gateway",
+  "name": "products",
   "version": "1.0.0",
-  "main": "api-gateway.js",
+  "main": "ProductService.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon api-gateway.js"
+    "start": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.8.4",
-    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
-    "http-proxy-middleware": "^3.0.3",
-    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.9"
   }
 }
