--- a/productservice/package.json
+++ b/productservice/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "amqplib": "^0.10.7",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "nodemon": "^3.1.9"
