--- a/userservice/package.json
+++ b/userservice/package.json
@@ -12,7 +12,7 @@
   "description": "",
   "dependencies": {
     "amqplib": "^0.10.7",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
