--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,26 @@
 services:
+
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.5.0
+    ports:
+      - "2181:2181"
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+
+  kafka:
+    image: confluentinc/cp-kafka:7.5.0
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    depends_on:
+      - zookeeper
+
   apigw:
     build: ./apigw
     ports:
@@ -19,3 +41,12 @@ services:
     build: ./userservice
     ports:
       - "4002:4002"
+
+  kafkaservice:
+    build: ./kafkaservice
+    ports:
+      - "5004:5004" # Optional, only if kafkaservice exposes HTTP
+    depends_on:
+      - kafka
+    environment:
+      - KAFKA_BROKER=kafka:9092
